@@ -5,9 +5,27 @@
 
 #include "attribute_.h"
 #include "child.h"
+#include "finite.h"
 #include "font.h"
 #include "object.h"
 #include "rectangle.h"
+
+
+/**
+ * @brief Criteria when to show the window title
+ */
+enum class TitleWhen {
+    never,
+    always,
+    one_tab,
+    multiple_tabs,
+};
+
+template <>
+struct is_finite<TitleWhen> : std::true_type {};
+template<> Finite<TitleWhen>::ValueList Finite<TitleWhen>::values;
+template<> inline Type Attribute_<TitleWhen>::staticType() { return Type::NAMES; }
+
 
 /** The proxy interface
  */
@@ -79,6 +97,8 @@ public:
     DynAttribute_<std::string> reset;
     AttributeProxy_<unsigned long>     border_width = {"border_width", 0};
     AttributeProxy_<unsigned long>     title_height = {"title_height", 0};
+    AttributeProxy_<int>           title_depth = {"title_depth", 0};
+    AttributeProxy_<TitleWhen>     title_when = {"title_when", TitleWhen::always};
     AttributeProxy_<Color>   border_color = {"color", {"black"}};
     AttributeProxy_<bool>    tight_decoration = {"tight_decoration", false}; // if set, there is no space between the
                               // decoration and the window content
@@ -97,8 +117,9 @@ public:
 
     Signal scheme_changed_; //! whenever one of the attributes changes.
 
-    Rectangle inner_rect_to_outline(Rectangle rect) const;
-    Rectangle outline_to_inner_rect(Rectangle rect) const;
+    Rectangle inner_rect_to_outline(Rectangle rect, size_t tabCount) const;
+    Rectangle outline_to_inner_rect(Rectangle rect, size_t tabCount) const;
+    bool showTitle(size_t tabCount) const;
 
     // after having called this with some vector 'decs', then if an attribute
     // is changed here, then the attribute with the same name is changed
